Add secondary information

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                   <p>&mdash; Hello! I want to utilize my combat skills, gained during fighting evil forces throughout my
                     life, to promote justice and keep evil in check by becoming an Auror.</p>
                   </p>
-                  <p style="opacity: 0.9;"><strong style="margin-right: 0.0625em; color: rgb(250, 7, 7);">*</strong>I twice defeated the one who cannot be named</p>
+                  <p style="opacity: 0.9;"><strong style="margin-right: 0.0625em; color: rgb(250, 7, 7);">*</strong>I
+                    twice defeated the one who cannot be named</p>
                 </div>
               </div>
             </div>
@@ -63,17 +64,216 @@
           </div>
           <div class="row">
             <div class="ten wide column">
-              <!-- Experience -->
+              <h3>Experience</h3>
+              <h6>Back then</h6>
+              <ul class="timeline">
+                <li>
+                  <p><em>31<sup>th</sup> July 1980</em></p>
+                  <p><strong>Born</strong> in <strong><a
+                        href="https://www.cntraveller.com/article/oscar-film-locations#:~:text=Lavenham%20Guildhall%20in%20Suffolk%20was,resting%20places%20of%20Harry's%20parents.">Godric's
+                        Hollow</a></strong></p>
+                </li>
+                <li>
+                  <p><em>31<sup>th</sup> Osctober 1981</em></p>
+                <li class="details">
+                  <input type="checkbox" id="other">
+                  <label for="other" class="summary"><strong>Defeated</strong> Voldemort</label>
+                  <div>
+                    <ul>
+                      <li>parents died</li>
+                      <li>received a cursed badge⚡</li>
+                    </ul>
+                  </div>
+                </li>
+                </li>
+                <li>
+                  <p><em>25<sup>th</sup> December 1992</em></p>
+                  <p>
+                    <strong>Stopped</strong> Voldemort from acquiring <strong><a
+                        href="https://harrypotter.fandom.com/wiki/Philosopher%27s_Stone">Sorcerer's Stone&#128511;</a></strong>
+                    in first year at Hogwards
+                  </p>
+                </li>
+                <li>
+                  <p><em>12<sup>th</sup> July 1993</em></p>
+                <li class="details">
+                  <input type="checkbox" id="other">
+                  <label for="other" class="summary">
+                    <strong>Killed</strong> <strong><a
+                        href="https://harrypotter.fandom.com/wiki/Basilisk">Basilisk&#128013;</a></strong>
+                    with Gryffindor's sword in second year at Hogwards
+                  </label>
+                  <div>
+                    <ul>
+                      <li>saved ginny weasley</li>
+                      <li>found Gryffindor's sword&#9876; and Secret Room&#128274;</li>
+                      <li>destroyed the horcrux</li>
+                    </ul>
+                  </div>
+                </li>
+                </li>
+                <li>
+                  <p><em>6<sup>th</sup> June 1994</em></p>
+                  <p>
+                    Fought a hundred dementors alone <strong>protecting</strong> lives of myself along with
+                    several others
+                  </p>
+                </li>
+                <li>
+                  <p><em>24<sup>th</sup> June 1995</em></p>
+                <li class="details">
+                  <input type="checkbox" id="other">
+                  <label for="other" class="summary">
+                    First one to <strong>fight <a href="https://harrypotter.fandom.com/ru/wiki/%D0%A2%D0%BE%D0%BC_%D0%A0%D0%B5%D0%B4%D0%B4%D0%BB">Voldemort👃</a> </strong> after his return to a human form in the Graveyard
+                  </label>
+                  <div>
+                    <ul>
+                      <li>successfully retrieved dead body of Cedric Diggory from the clutches of Death Eaters and
+                        Voldemort himself</li>
+                    </ul>
+                  </div>
+                </li>
+                </li>
+                <li>
+                  <p><em>12<sup>th</sup> August 1996</em></p>
+                <li class="details">
+                  <input type="checkbox" id="other">
+                  <label for="other" class="summary">
+                    Retrieved the prophecy from <strong><a
+                        href="https://harrypotter.fandom.com/wiki/Department_of_Mysteries">the Department of
+                        Mysteries&#128302;</a></strong>
+                    before it could fall into wrong hands
+                  </label>
+                  <div>
+                    <ul>
+                      <li>Fought with Death Eaters leading fellow members of DA.</li>
+                    </ul>
+                  </div>
+                </li>
+                </li>
+                <li>
+                  <p><em>30<sup>th</sup> June 1997</em></p>
+                  <p>Assisted <strong><a
+                        href="https://harrypotter.fandom.com/ru/wiki/%D0%90%D0%BB%D1%8C%D0%B1%D1%83%D1%81_%D0%94%D0%B0%D0%BC%D0%B1%D0%BB%D0%B4%D0%BE%D1%80">Albus
+                        Dumbldore</a></strong>
+                    , Princial Hogwarts School of Witchcraft and Wizadry, in finding the truth about Horcrux and
+                    destroying them
+                  </p>
+                </li>
+                <li>
+                  <p><em>1997-1998</em></p>
+                  <p><strong>Found and Destroyed</strong> Horcruxes including part of Voldemort's soul residing inside my
+                  body by taking a killing curse to the chest</p>
+                </li>
+                <li>
+                  <p><em>2<sup>th</sup> May 1998</em></p>
+                  <p><strong>Successfully</strong> Hogwards agains Voldemort's and Death Eater's attack</p>
+                </li>
+                <li>
+                  <p><em>3<sup>th</sup> May 1998</em></p>
+                  <p><strong>Won</strong> the one on one duel agains Voldemort and destroyed him for good</p>
+                  <ul>
+                    <li>not again, but again&#128516;</li>
+                  </ul>
+                </li>
+              </ul>
+              <h6>Recent</h6>
+              <ul class="timeline">
+                <li class="highlighted">
+                  <p><em>2001 - present</em></p>
+                  <p><strong>Head Auror</strong> - Level Two of the Ministry of Magic</p>
+                  <ul>
+                    <li>Train and establish an elite unit of highly skilled officers</li>
+                    <li>Invesigate crimes related to the dark arts</li>
+                    <li>Apprehend and imprison dark wizards&#129497; and witches🧙‍♀️</li>
+                  </ul>
+                </li>
+              </ul>
             </div>
             <div class="six wide column">
-              <!-- Languages -->
-              <!-- Skills -->
-              <!-- Character -->
-              <!-- Likes -->
-              <!-- Dislikes -->
-              <!-- Wants -->
-              <!-- Education -->
-              <!-- Articles -->
+              <section>
+                <h3>Languages</h3>
+                <p class="tags small">
+                  <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span>
+                  <span class="language" lang="en">🐍 PARSELTONGUE</span>
+                </p>
+              </section>
+              <section>
+                <h3>Skills</h3>
+                <p class="tags small">
+                  <ul>
+                    <li>Background in Charms</li>
+                    <li>Healing Magic Expert</li>
+                    <li>Care of Magical Creatures</li>
+                    <li>Wandless Magic</li>
+                    <li>Herbology Knowledge</li>
+                    <li>Transfiguration Skills</li>
+                    <li>Seasoned Duelist</li>
+                    <li>Broomstick Master</li>
+                    <li>Curse, Hex, and Jinx</li>
+                    <li>Fluent in Parseltounge</li>
+                    <li>Quidditch Seeker</li>
+                  </ul>
+                </p>
+              </section>
+              <section>
+                <h3>Character</h3>
+                <p class="tags small">Strongly guided by my own conscience, and have a keen feeling of what is right and wrong.</p>
+              </section>
+              <section>
+                <h3>Likes&#x1f603;</h3>
+                <p class="tags small">
+                  <ul>
+                    <li>Playing Quidditch&#9917;</li>
+                    <li>Enjoys flying on my boom stick</li>
+                    <li>Hanging out with with friends</li>
+                    <li>The spell expelliarmus and expecto patronum</li>
+                  </ul>
+                </p>
+              </section>
+              <section>
+                <h3>Dislikes&#x1f61e;</h3>
+                <p class="tags small">
+                  <ul>
+                    <li>Potions</li>
+                    <li>Death eaters</li>
+                    <li>Blood discrimination</li>
+                  </ul>
+                </p>
+              </section>
+              <section>
+                <h3>Wants&#x1f97a;</h3>
+                <p class="tags small bulleted"><span class="tag">TO BE WITH MY FAMILY AND FRIENDS</span><span class="tag">HELP THE MAGICAN WORLD</span><span class="tag">TO BE STRONGER</span></p>
+              </section>
+              <section>
+                <h3>Education</h3>
+                <ul class="timeline">
+                  <li>
+                    <div><em>Every day</em></div>
+                    <p class="tags bulleted">
+                      <span class="tag">New spells</span>
+                    </p>
+                  </li>
+                  <li>
+                  <li>
+                    <div><em>1<sup>st</sup> September 1991 &ndash; 21<sup>st</sup> June 1998</em></div>
+                    <div><strong>Certificate of graduation</strong> at <strong>Hogwards School of WitchCraft and Wizadry</strong></div>
+                  </li>
+                </ul>
+              </section>
+              <section>
+                <h3>Accomplishments🏆</h3>
+                <p class="tags small">
+                  <ul>
+                    <li>Triwizard Tournament Champion</li>
+                    <li>Slayed the Basilisk with a sword</li>
+                    <li>United the Deathly Hollows💀</li>
+                    <li>Mastered a wand made of Hawthorn</li>
+                    <li>"Worked With" Hungarian Horntails</li>
+                    <li>House and Quidditch Cup Champion</li>
+                  </ul>
+                </p>
+              </section>
             </div>
           </div>
         </div>
