Added additional information

--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <meta name="description" content="Harry Potter Résumé">
+  <meta name="robots" content="index,follow">
+  <meta name="googlebot" content="index,follow">
+  <meta name="google" content="nositelinkssearchbox">
+  <meta name="google-site-verification" content="verification_token">
+  <meta name="yandex-verification" content="verification_token">
+  <meta name="msvalidate.01" content="verification_token">
+  <meta name="alexaVerifyID" content="verification_token">
+  <meta name="p:domain_verify" content="code_from_pinterest">
+  <meta name="norton-safeweb-site-verification" content="norton_code">
   <title>Résumé</title>
   <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Harry Potter Résumé">
+  <meta property="og:description" content="Harry Potter Résumé">
+  <meta property="og:site_name" content="Resume">
+  <meta property="og:locale" content="en_US">
 </head>
 
 <body>
   <main>
+    <div id="wave">
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" viewBox="414 334 1440 118">
+        <path fill="currentColor" d="M1168.4,421.2c266.9,49.9,515.4,28.9,685.6,8.8v-96H414v96C601.3,407.8,844,360.6,1168.4,421.2z"></path>
+      </svg>
+    </div>
     <article>
       <div class="page" style="border-color: midnightblue;">
         <div class="stackable grid">
@@ -22,7 +43,7 @@
             <div class="thirteen wide column">
               <div class="stackable grid">
                 <div class="sixteen wide column">
-                  <h1 class="name">Harry James Potter <small>(The boy who survived)</small></h1>
+                  <h1 class="name">Harry James Potter <small>(The boy who lived)</small></h1>
                   <div class="job">Auror</div>
                   <ul class="contacts">
                     <li>
@@ -90,7 +111,8 @@
                   <p><em>25<sup>th</sup> December 1992</em></p>
                   <p>
                     <strong>Stopped</strong> Voldemort from acquiring <strong><a
-                        href="https://harrypotter.fandom.com/wiki/Philosopher%27s_Stone">Sorcerer's Stone&#128511;</a></strong>
+                        href="https://harrypotter.fandom.com/wiki/Philosopher%27s_Stone">Sorcerer's
+                        Stone&#128511;</a></strong>
                     in first year at Hogwards
                   </p>
                 </li>
@@ -124,7 +146,9 @@
                 <li class="details">
                   <input type="checkbox" id="other">
                   <label for="other" class="summary">
-                    First one to <strong>fight <a href="https://harrypotter.fandom.com/ru/wiki/%D0%A2%D0%BE%D0%BC_%D0%A0%D0%B5%D0%B4%D0%B4%D0%BB">Voldemort👃</a> </strong> after his return to a human form in the Graveyard
+                    First one to <strong>fight <a
+                        href="https://harrypotter.fandom.com/ru/wiki/%D0%A2%D0%BE%D0%BC_%D0%A0%D0%B5%D0%B4%D0%B4%D0%BB">Voldemort👃</a>
+                    </strong> after his return to a human form in the Graveyard
                   </label>
                   <div>
                     <ul>
@@ -162,8 +186,9 @@
                 </li>
                 <li>
                   <p><em>1997-1998</em></p>
-                  <p><strong>Found and Destroyed</strong> Horcruxes including part of Voldemort's soul residing inside my
-                  body by taking a killing curse to the chest</p>
+                  <p><strong>Found and Destroyed</strong> Horcruxes including part of Voldemort's soul residing inside
+                    my
+                    body by taking a killing curse to the chest</p>
                 </li>
                 <li>
                   <p><em>2<sup>th</sup> May 1998</em></p>
@@ -201,49 +226,51 @@
               <section>
                 <h3>Skills</h3>
                 <p class="tags small">
-                  <ul>
-                    <li>Background in Charms</li>
-                    <li>Healing Magic Expert</li>
-                    <li>Care of Magical Creatures</li>
-                    <li>Wandless Magic</li>
-                    <li>Herbology Knowledge</li>
-                    <li>Transfiguration Skills</li>
-                    <li>Seasoned Duelist</li>
-                    <li>Broomstick Master</li>
-                    <li>Curse, Hex, and Jinx</li>
-                    <li>Fluent in Parseltounge</li>
-                    <li>Quidditch Seeker</li>
-                  </ul>
+                <ul>
+                  <li>Background in Charms</li>
+                  <li>Healing Magic Expert</li>
+                  <li>Care of Magical Creatures</li>
+                  <li>Wandless Magic</li>
+                  <li>Herbology Knowledge</li>
+                  <li>Transfiguration Skills</li>
+                  <li>Seasoned Duelist</li>
+                  <li>Broomstick Master</li>
+                  <li>Curse, Hex, and Jinx</li>
+                  <li>Fluent in Parseltounge</li>
+                  <li>Quidditch Seeker</li>
+                </ul>
                 </p>
               </section>
               <section>
                 <h3>Character</h3>
-                <p class="tags small">Strongly guided by my own conscience, and have a keen feeling of what is right and wrong.</p>
+                <p class="tags small">Strongly guided by my own conscience, and have a keen feeling of what is right and
+                  wrong.</p>
               </section>
               <section>
                 <h3>Likes&#x1f603;</h3>
                 <p class="tags small">
-                  <ul>
-                    <li>Playing Quidditch&#9917;</li>
-                    <li>Enjoys flying on my boom stick</li>
-                    <li>Hanging out with with friends</li>
-                    <li>The spell expelliarmus and expecto patronum</li>
-                  </ul>
+                <ul>
+                  <li>Playing Quidditch&#9917;</li>
+                  <li>Enjoys flying on my boom stick</li>
+                  <li>Hanging out with with friends</li>
+                  <li>The spell expelliarmus and expecto patronum</li>
+                </ul>
                 </p>
               </section>
               <section>
                 <h3>Dislikes&#x1f61e;</h3>
                 <p class="tags small">
-                  <ul>
-                    <li>Potions</li>
-                    <li>Death eaters</li>
-                    <li>Blood discrimination</li>
-                  </ul>
+                <ul>
+                  <li>Potions</li>
+                  <li>Death eaters</li>
+                  <li>Blood discrimination</li>
+                </ul>
                 </p>
               </section>
               <section>
                 <h3>Wants&#x1f97a;</h3>
-                <p class="tags small bulleted"><span class="tag">TO BE WITH MY FAMILY AND FRIENDS</span><span class="tag">HELP THE MAGICAN WORLD</span><span class="tag">TO BE STRONGER</span></p>
+                <p class="tags small bulleted"><span class="tag">TO BE WITH MY FAMILY AND FRIENDS</span><span
+                    class="tag">HELP THE MAGICAN WORLD</span><span class="tag">TO BE STRONGER</span></p>
               </section>
               <section>
                 <h3>Education</h3>
@@ -257,21 +284,22 @@
                   <li>
                   <li>
                     <div><em>1<sup>st</sup> September 1991 &ndash; 21<sup>st</sup> June 1998</em></div>
-                    <div><strong>Certificate of graduation</strong> at <strong>Hogwards School of WitchCraft and Wizadry</strong></div>
+                    <div><strong>Certificate of graduation</strong> at <strong>Hogwards School of WitchCraft and
+                        Wizadry</strong></div>
                   </li>
                 </ul>
               </section>
               <section>
                 <h3>Accomplishments🏆</h3>
                 <p class="tags small">
-                  <ul>
-                    <li>Triwizard Tournament Champion</li>
-                    <li>Slayed the Basilisk with a sword</li>
-                    <li>United the Deathly Hollows💀</li>
-                    <li>Mastered a wand made of Hawthorn</li>
-                    <li>"Worked With" Hungarian Horntails</li>
-                    <li>House and Quidditch Cup Champion</li>
-                  </ul>
+                <ul>
+                  <li>Triwizard Tournament Champion</li>
+                  <li>Slayed the Basilisk with a sword</li>
+                  <li>United the Deathly Hollows💀</li>
+                  <li>Mastered a wand made of Hawthorn</li>
+                  <li>"Worked With" Hungarian Horntails</li>
+                  <li>House and Quidditch Cup Champion</li>
+                </ul>
                 </p>
               </section>
             </div>
@@ -280,6 +308,9 @@
       </div>
     </article>
   </main>
+  <footer>
+		<em>“That's all Folks!”</em>&nbsp;🐷
+	</footer>
 </body>
 
 </html>
