--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta charset="UTF-8" />
   <meta name="description" content="Harry Potter Résumé">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
@@ -14,6 +13,8 @@
   <meta name="alexaVerifyID" content="verification_token">
   <meta name="p:domain_verify" content="code_from_pinterest">
   <meta name="norton-safeweb-site-verification" content="norton_code">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Résumé</title>
   <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
   <meta property="og:type" content="website">
