Add images to my page
Update footer and intro

--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
   <meta property="og:description" content="Harry Potter Résumé">
   <meta property="og:site_name" content="Resume">
   <meta property="og:locale" content="en_US">
+  <style>
+    main {
+      height: 100%;
+      width: 100%;
+      background-image: url(./assets/img/intro.jpg);
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  </style>
 </head>
 
 <body>
   <main>
-    <div id="wave">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" viewBox="414 334 1440 118">
-        <path fill="currentColor" d="M1168.4,421.2c266.9,49.9,515.4,28.9,685.6,8.8v-96H414v96C601.3,407.8,844,360.6,1168.4,421.2z"></path>
-      </svg>
-    </div>
     <article>
       <div class="page" style="border-color: midnightblue;">
         <div class="stackable grid">
@@ -188,8 +194,7 @@
                 <li>
                   <p><em>1997-1998</em></p>
                   <p><strong>Found and Destroyed</strong> Horcruxes including part of Voldemort's soul residing inside
-                    my
-                    body by taking a killing curse to the chest</p>
+                    my body by taking a killing curse to the chest</p>
                 </li>
                 <li>
                   <p><em>2<sup>th</sup> May 1998</em></p>
@@ -201,6 +206,7 @@
                   <ul>
                     <li>not again, but again&#128516;</li>
                   </ul>
+                  <img src="./assets/img/battle.jpg" width="350" alt="Harry vs Voldemort">
                 </li>
               </ul>
               <h6>Recent</h6>
@@ -310,7 +316,7 @@
     </article>
   </main>
   <footer>
-		<em>“That's all Folks!”</em>&nbsp;🐷
+		<em>It is impossible to manufacture or imitate love</em>❤️
 	</footer>
 </body>
 
